@@ -127,7 +127,7 @@ public abstract class AbstractQualifierPolymorphism implements QualifierPolymorp
      * @param type the type to annotate
      */
     @Override
-    public void annotate(MethodInvocationTree tree, AnnotatedExecutableType type) {
+    public void resolve(MethodInvocationTree tree, AnnotatedExecutableType type) {
         if (polyQuals.isEmpty()) {
             return;
         }
@@ -169,7 +169,7 @@ public abstract class AbstractQualifierPolymorphism implements QualifierPolymorp
     }
 
     @Override
-    public void annotate(NewClassTree tree, AnnotatedExecutableType type) {
+    public void resolve(NewClassTree tree, AnnotatedExecutableType type) {
         if (polyQuals.isEmpty()) {
             return;
         }
@@ -193,7 +193,7 @@ public abstract class AbstractQualifierPolymorphism implements QualifierPolymorp
     }
 
     @Override
-    public void annotate(
+    public void resolve(
             AnnotatedExecutableType functionalInterface, AnnotatedExecutableType memberReference) {
         for (AnnotationMirror type : functionalInterface.getReturnType().getAnnotations()) {
             if (QualifierPolymorphism.hasPolymorphicQualifier(type)) {
